# jira-oauth

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
jira_oauth/: __init__.py  console.py
