[tool.poetry]
name = "jira-oauth"
version = "0.1.12"
description = "Python library for Jira OAuth "
authors = ["Roman Inflianskas <infroma@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rominf/jira-oauth"

[tool.poetry.dependencies]
python = "^3.6"
asn1crypto = "^0.24.0"
certifi = "^2018.11"
cffi = "^1.11"
chardet = "^3.0"
click = "^7.0"
cryptography = "^2.4"
defusedxml = "^0.5.0"
httplib2 = "^0.12.0"
idna = "^2.8"
oauth2 = "^1.9"
oauthlib = "^2.1"
pbr = "^5.1"
pycparser = "^2.19"
PyJWT = "^1.7"
six = "^1.11"
tlslite = "^0.4.9"
urllib3 = "^1.24"
yarl = "^1.3"
aiohttp = "^3.4"
dataclasses = "^0.6.0"
aioauth2 = "^0.1.0"
poetry-version = "^0.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
jira-oauth = "jira_oauth.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
